cmake_minimum_required(VERSION 3.5)
project(molpher_lib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -g -DDBOOST_ALL_NO_LIB -DDBOOST_THREAD_USE_LIB")

# include dependencies
set(DEPS_DIR "deps")
include_directories(
        ${DEPS_DIR}/tbb/include/
        ${DEPS_DIR}/rdkit/Code/
        ${DEPS_DIR}/boost/
)

# include project directories
include_directories(
        include/
        src/
)

# Molpher-lib source files
set(SOURCE_FILES
    include/data_structs/ExplorationData.hpp
    include/data_structs/ExplorationTree.hpp
    include/data_structs/MolpherMol.hpp
    include/operations/callbacks/TraverseCallback.hpp
    include/operations/ExtendTreeOper.hpp
    include/operations/FilterMorphsOper.hpp
    include/operations/FindLeavesOper.hpp
    include/operations/GenerateMorphsOper.hpp
    include/operations/PruneTreeOper.hpp
    include/operations/SortMorphsOper.hpp
    include/operations/TraverseOper.hpp
    include/operations/TreeOperation.hpp
    include/selectors/chemoper_selectors.h
    include/selectors/fingerprint_selectors.h
    include/selectors/simcoeff_selectors.h
    include/SAScore_data_loader.hpp
    src/core/API/operations/callbacks/TraverseCallback.cpp
    src/core/API/operations/callbacks/TraverseCallbackImpl.hpp
    src/core/API/operations/ExtendTreeOper.cpp
    src/core/API/operations/ExtendTreeOperImpl.hpp
    src/core/API/operations/FilterMorphsOper.cpp
    src/core/API/operations/FilterMorphsOperImpl.hpp
    src/core/API/operations/FindLeavesOper.cpp
    src/core/API/operations/FindLeavesOperImpl.hpp
    src/core/API/operations/GenerateMorphsOper.cpp
    src/core/API/operations/GenerateMorphsOperImpl.hpp
    src/core/API/operations/PruneTreeOper.cpp
    src/core/API/operations/PruneTreeOperImpl.hpp
    src/core/API/operations/SortMorphsOper.cpp
    src/core/API/operations/SortMorphsOperImpl.hpp
    src/core/API/operations/TraverseOper.cpp
    src/core/API/operations/TraverseOperImpl.hpp
    src/core/API/operations/TreeOperation.cpp
    src/core/API/operations/TreeOperationImpl.hpp
    src/core/API/ExplorationData.cpp
    src/core/API/ExplorationTree.cpp
    src/core/API/ExplorationTreeImpl.h
    src/core/API/MolpherMol.cpp
    src/core/API/MolpherMolImpl.hpp
    src/core/chem/fingerprintStrategy/AtomPairsFngpr.cpp
    src/core/chem/fingerprintStrategy/AtomPairsFngpr.hpp
    src/core/chem/fingerprintStrategy/FingerprintStrategy.cpp
    src/core/chem/fingerprintStrategy/FingerprintStrategy.h
    src/core/chem/fingerprintStrategy/MorganFngpr.cpp
    src/core/chem/fingerprintStrategy/MorganFngpr.hpp
    src/core/chem/fingerprintStrategy/TopolLayeredFngpr1.cpp
    src/core/chem/fingerprintStrategy/TopolLayeredFngpr1.hpp
    src/core/chem/fingerprintStrategy/TopolLayeredFngpr2.cpp
    src/core/chem/fingerprintStrategy/TopolLayeredFngpr2.hpp
    src/core/chem/fingerprintStrategy/TopolSingleFngpr.cpp
    src/core/chem/fingerprintStrategy/TopolSingleFngpr.hpp
    src/core/chem/fingerprintStrategy/TopolTorsFngpr.cpp
    src/core/chem/fingerprintStrategy/TopolTorsFngpr.hpp
    src/core/chem/fingerprintStrategy/VectorFpFngpr.cpp
    src/core/chem/fingerprintStrategy/VectorFpFngpr.hpp
    src/core/chem/morphing/CalculateDistances.hpp
    src/core/chem/morphing/CalculateMorphs.hpp
    src/core/chem/morphing/Morphing.cpp
    src/core/chem/morphing/Morphing.hpp
    src/core/chem/morphing/MorphingData.cpp
    src/core/chem/morphing/MorphingData.h
    src/core/chem/morphing/MorphingFtors.cpp
    src/core/chem/morphing/MorphingFtors.hpp
    src/core/chem/morphing/ReturnResults.hpp
    src/core/chem/morphingStrategy/MorphingStrategy.h
    src/core/chem/morphingStrategy/OpAddAtom.cpp
    src/core/chem/morphingStrategy/OpAddAtom.hpp
    src/core/chem/morphingStrategy/OpAddBond.cpp
    src/core/chem/morphingStrategy/OpAddBond.hpp
    src/core/chem/morphingStrategy/OpBondContraction.cpp
    src/core/chem/morphingStrategy/OpBondContraction.hpp
    src/core/chem/morphingStrategy/OpBondReroute.cpp
    src/core/chem/morphingStrategy/OpBondReroute.hpp
    src/core/chem/morphingStrategy/OpInterlayAtom.cpp
    src/core/chem/morphingStrategy/OpInterlayAtom.hpp
    src/core/chem/morphingStrategy/OpMutateAtom.cpp
    src/core/chem/morphingStrategy/OpMutateAtom.hpp
    src/core/chem/morphingStrategy/OpRemoveAtom.cpp
    src/core/chem/morphingStrategy/OpRemoveAtom.hpp
    src/core/chem/morphingStrategy/OpRemoveBond.cpp
    src/core/chem/morphingStrategy/OpRemoveBond.hpp
    src/core/chem/simCoefStrategy/AllBitSimCoef.cpp
    src/core/chem/simCoefStrategy/AllBitSimCoef.hpp
    src/core/chem/simCoefStrategy/AsymmetricSimCoef.cpp
    src/core/chem/simCoefStrategy/AsymmetricSimCoef.hpp
    src/core/chem/simCoefStrategy/BraunBlanquetSimCoef.cpp
    src/core/chem/simCoefStrategy/BraunBlanquetSimCoef.hpp
    src/core/chem/simCoefStrategy/CosineSimCoef.cpp
    src/core/chem/simCoefStrategy/CosineSimCoef.hpp
    src/core/chem/simCoefStrategy/DiceSimCoef.cpp
    src/core/chem/simCoefStrategy/DiceSimCoef.hpp
    src/core/chem/simCoefStrategy/KulczynskiSimCoef.cpp
    src/core/chem/simCoefStrategy/KulczynskiSimCoef.hpp
    src/core/chem/simCoefStrategy/McConnaugheySimCoef.cpp
    src/core/chem/simCoefStrategy/McConnaugheySimCoef.hpp
    src/core/chem/simCoefStrategy/OnBitSimCoef.cpp
    src/core/chem/simCoefStrategy/OnBitSimCoef.hpp
    src/core/chem/simCoefStrategy/RusselSimCoef.cpp
    src/core/chem/simCoefStrategy/RusselSimCoef.hpp
    src/core/chem/simCoefStrategy/SimCoefStrategy.h
    src/core/chem/simCoefStrategy/SokalSimCoef.cpp
    src/core/chem/simCoefStrategy/SokalSimCoef.hpp
    src/core/chem/simCoefStrategy/TanimotoSimCoef.cpp
    src/core/chem/simCoefStrategy/TanimotoSimCoef.hpp
    src/core/chem/simCoefStrategy/TverskySimCoef.cpp
    src/core/chem/simCoefStrategy/TverskySimCoef.hpp
    src/core/chem/ChemicalAuxiliary.cpp
    src/core/chem/ChemicalAuxiliary.h
    src/core/chem/SimCoefCalculator.cpp
    src/core/chem/SimCoefCalculator.hpp
    src/core/data_structs/ExplorationDataImpl.hpp
    src/core/data_structs/MolpherAtom.h
    src/core/data_structs/MolpherMolData.hpp
    src/core/data_structs/MolpherParam.h
    src/core/misc/selectors/chemoper_selectors.cpp
    src/core/misc/selectors/fingerprint_selectors.cpp
    src/core/misc/selectors/simcoeff_selectors.cpp
    src/core/misc/global_types.h
    src/core/misc/inout.cpp
    src/core/misc/inout.h
    src/core/misc/iteration_serializer.cpp
    src/core/misc/iteration_serializer.hpp
    src/core/misc/SAScore.cpp
    src/core/misc/SAScore.h
    src/core/misc/SAScore_data_loader.cpp
    src/core/misc/SynchRand.cpp
    src/core/misc/SynchRand.h
    src/swig/molpher_wrap.cpp
    src/swig/molpher_wrap.h
)

# Target definition
add_library(libmolpher.so SHARED ${SOURCE_FILES})